# share_py

./: .gitignore  Dockerfile  book.toml  coverage.xml  junit-results.xml  readme.md  setup.cfg
.github/workflows/: pull_request.yml
docs/: SUMMARY.md  architecture.md  backend.md  background.md  data_architecture.md  frontend.md  operations.md
share/: manage.py
share/share/: asgi.py  settings.py  urls.py  views.py  wsgi.py
share/share_app/: apps.py  models.py  permissions.py  serializers.py  views.py
share/share_app/migrations/: 0001_initial.py  0002_alter_location_unique_together.py  0003_alter_location_unique_together.py  0004_item.py
tests/: conftest.py  test_category.py  test_item.py  test_location.py  test_pytest.py
