[metadata]
name = share
version = 0.0.1
author = gitlab_user
description = Some nice stuff to share and not to buy
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
install_requires =
    django
    djangorestframework
    djangorestframework-simplejwt
     drf-yasg

packages = find:
python_requires = >=3.9

[options.packages.find]
where = .
include = backend*

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-mock
    pytest-django
    pytest_drf
    robotframework
    robotframework-seleniumlibrary
    robotframework-djangolibrary
    robotframework-requests


[tool:pytest]
minversion = 6.0
# addopts = -ra -q
pythonpath = share
DJANGO_SETTINGS_MODULE = share.settings
